# entroprise-api

./: .env  .gitignore  Dockerfile  Dockerfile-dev  README.md  app.js  app.py  cloudbuild.yaml  comparison.py  docker-compose.yaml  image.js  index.js  main.py  package-lock.json  package.json  pubsubimageprocessnotes.txt  pyproject.toml  requirements.txt
Scripts/: activate  activate.bat  alembic-script.py  futurize-script.py  pasteurize-script.py  sacremoses-script.py  watchmedo-script.py
app/api/: item.py
app/model/: doc_model_base.py  item.py
app/service/: item_service.py
