[tool.poetry]
name = "entroprise-api"
version = "0.1.0"
description = ""
authors = ["Peter Arnold <peter@deepsixdesign.com>"]

[tool.poetry.dependencies]
python = "^3.7"
transformers = "^3.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"